--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,8 +18,12 @@
 @import "./components/footer";
 
 
+@import "./components/contact-page";
+
+
 //Маленькие компоненты
 @import "./components/social";
 @import "./components/product";
+@import "./components/breadcrumbs";
 
 @import "media";
