Сделал несколько страник: faq, контакты, о нас, оплата и доставка

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,9 @@
 @import "./components/footer";
 
 
+@import "./components/about-us";
+@import "./components/payment";
+@import "./components/faq";
 @import "./components/contact-page";
 
 
