Сделал несколько страниц для сайта

--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -26,6 +26,10 @@
 
   }
   &__link {
-
+    &--current {
+      pointer-events: none;
+      cursor: default;
+      user-select: none;
+    }
   }
 }
