--- a/src/scss/components/_about-us.scss
+++ b/src/scss/components/_about-us.scss
@@ -7,7 +7,7 @@
     position: absolute;
     content: '';
     background-repeat: no-repeat;
-    background-size: cover;
+    z-index: -1;
     background-size: cover;
   }
   &::before {
