--- a/src/scss/components/_faq.scss
+++ b/src/scss/components/_faq.scss
@@ -12,14 +12,14 @@
     z-index: -1;
   }
   &::before {
-    top: -31%;
-    left: -18%;
+    top: -280px;
+    left: -310px;
     width: 716px;
     height: 920px;
     background-image: url('../img/faq-img-top-left.png');
   }
   &::after {
-    top: -7%;
+    top: -85px;
     right: 0;
     width: 620px;
     height: 660px;
