--- a/src/scss/components/_corporate.scss
+++ b/src/scss/components/_corporate.scss
@@ -26,6 +26,26 @@
     width: 410px;
     height: 500px;
   }
+  &__container {
+    position: relative;
+    &::before,
+    &::after {
+      position: absolute;
+      content: '';
+      bottom: -10%;
+      width: 300px;
+      height: 300px;
+      background: #ea661c;
+      filter: blur(120px);
+      z-index: -1;
+    }
+    &::before {
+      left: -40%;
+    }
+    &::after {
+      right: -40%;
+    }
+  }
   &__top {
     max-width: 650px;
     margin-bottom: 100px;
@@ -64,26 +84,22 @@
     line-height: 48px;
     letter-spacing: 0.02em;
     text-transform: uppercase;
-    margin-bottom: 20px;
+    margin-bottom: 60px;
   }
-  &__info-text {
-    @extend %oswald-400;
-    font-size: 20px;
-    line-height: 30px;
-    letter-spacing: 0.04em;
-    color:var(--turquoise);
-    text-transform: uppercase;
-  }
+
   &__table-info {
     margin-top: 75px;
     margin-bottom: 100px;
   }
-  &__work-stages {
-
-  }
   &__form {
-
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    .bottom-text {
+      color: #EA661C;
+    }
   }
+
 }
 
 .corporate-content {
@@ -134,9 +150,6 @@
       background-color: var(--turquoise);
     }
   }
-  &__list {
-
-  }
   &__list-item {
     @extend %oswald-400;
     font-size: 20px;
@@ -145,8 +158,7 @@
     text-transform: uppercase;
   }
 }
-.corporate-form {
-}
+
 .corporate-table {
   position: relative;
   width: 1110px;
@@ -190,4 +202,77 @@
     background: rgba(0,0,0,.3);
     backdrop-filter: blur(60px);
   }
+}
+
+
+.form-corp {
+  display: flex;
+  flex-direction: column;
+  fieldset {
+    padding: 0;
+    border:none;
+    margin-bottom: 40px;
+  }
+  &__info-text {
+    @extend %oswald-400;
+    margin-bottom: 20px;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0.04em;
+    color:var(--turquoise);
+    text-transform: uppercase;
+  }
+  &__inputs {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    column-gap: 30px;
+    flex-wrap: wrap;
+  }
+  &__inputs-left{
+  }
+  &__inputs-right{
+  }
+  &__label {
+    max-width: 540px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.06em;
+    @extend %oswald-400;
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+  &__input {
+    margin-top: 5px;
+    width: 100%;
+    padding: 20px;
+    color :var(--white);
+    background-color: transparent;
+    border: 1px solid #555555;
+    &::placeholder {
+      color: #555;
+    }
+  }
+  &__btn {
+    margin-bottom: 10px;
+  }
+  &__info {
+    width: 370px;
+    color: var(--white);
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.02em;
+  }
+  &__info-link {
+    color:#8B3131;
+  }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
