--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -35,8 +35,18 @@
     margin-right: 145px;
   }
   &__item {
+    position: relative;
     &:not(:last-child) {
       margin-right: 50px;
+    }
+    &--dropdown {
+      &:hover {
+        .dropdown-menu {
+          top: 30px;
+          opacity: 1;
+          visibility: visible;
+      }
+      }
     }
   }
   &__link {
@@ -56,6 +66,7 @@
       background-color: var(--turquoise);
       opacity: 0;
       transition: opacity .3s ease-in-out;
+
     }
     &:hover {
       color: var(--turquoise);
@@ -76,6 +87,28 @@
     cursor: pointer;
   }
 }
+
+.dropdown-menu {
+  position: absolute;
+  width: 260px;
+  top: 150%;
+  left: -20px;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
+  background-color: rgba($color: #000000, $alpha: .2);
+  padding: 10px 20px 10px;
+  background: rgba(0,0,0,.3);
+  backdrop-filter: blur(5px);
+  &__item {
+    &:not(:last-child) {
+      margin-bottom: 5px;
+    }
+    a {
+    }
+  }
+}
+
 
 
 .info-box {
@@ -127,3 +160,5 @@
     }
   }
 }
+
+
