Начал делать станицу карточки товара

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,4 +34,5 @@
 @import "./components/faq";
 @import "./components/contact-page";
 @import "./components/corporate";
+@import "./components/card";
 @import "media";
