--- a/src/scss/components/_populat-flow.scss
+++ b/src/scss/components/_populat-flow.scss
@@ -56,7 +56,8 @@
 
   }
   &__flows {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
     margin-bottom: 60px;
   }
