--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@
 @import "./components/contact";
 @import "./components/instagram";
 @import "./components/footer";
+@import "./components/catalog-page";
 
 
 
