--- a/src/scss/_libs.scss
+++ b/src/scss/_libs.scss
@@ -1,11 +1,11 @@
 // стили для свайпера
-// @import '../../node_modules/swiper/swiper-bundle';
+@import '../../node_modules/swiper/swiper-bundle';
 
 // стили для модального окна
 // @import "../../node_modules/graph-modal/dist/graph-modal.min";
 
 // стили для табов
-// @import "../../node_modules/graph-tabs/dist/graph-tabs.min";
+@import "../../node_modules/graph-tabs/dist/graph-tabs.min";
 
 // стили для библиотеки aos
 // @import "../../node_modules/aos/dist/aos";
