--- a/src/scss/_libs.scss
+++ b/src/scss/_libs.scss
@@ -11,7 +11,8 @@
 // @import "../../node_modules/aos/dist/aos";
 
 // стили для скролла simplebar
-// @import "../../node_modules/simplebar/dist/simplebar.min";
+@import "../../node_modules/simplebar/dist/simplebar.min";
+@import "../../node_modules/nouislider/dist/nouislider.min";
 
 
 
