--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,4 +36,5 @@
 @import "./components/contact-page";
 @import "./components/corporate";
 @import "./components/card";
+@import "./components/card-bag.scss";
 @import "media";
