--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -135,6 +135,10 @@ html {
   border-radius: 10%;
   background: rgba(0, 0, 0, 0.20);
   backdrop-filter: blur(10px);
+  cursor: pointer;
+  * {
+    pointer-events: none;
+  }
   &__num {
     position: absolute;
     top: 11px;
@@ -149,7 +153,7 @@ html {
     color: #142B2B;
     @extend %oswald-400;
     font-size: 12px;
-    letter-spacing: 0.48px; 
+    letter-spacing: 0.48px;
   }
   &__btn {
     width: 30px;
@@ -232,3 +236,18 @@ html {
     }
   }
 }
+// .blure {
+//   filter: blur(7px);
+//   transition: filter .2s linear;
+//   &:before {
+//     position: absolute;
+//     content:'';
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background: rgba(0,0,0,.2);
+//     filter: blur(20px);
+//     z-index: 3;
+//    }
+// }
