Сделал сттаницу оформления заказов

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 @import "./components/instagram";
 @import "./components/footer";
 @import "./components/catalog-page";
+@import "./components/placing";
 
 
 
