--- a/src/scss/components/_payment-error.scss
+++ b/src/scss/components/_payment-error.scss
@@ -79,6 +79,7 @@
     font-size: 12px;
     line-height: 18px;
     letter-spacing: 0.1em;
+    text-transform: uppercase;
     background-color: var(--purple);
     color: var(--white);
     @extend %oswald-700;
