--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,5 +37,5 @@
 @import "./components/contact-page";
 @import "./components/corporate";
 @import "./components/card";
-@import "./components/card-bag.scss";
+@import "./components/card-bag";
 @import "media";
