Доделал кнопки выбора на странице каталога

--- a/src/scss/components/_catalog-page.scss
+++ b/src/scss/components/_catalog-page.scss
@@ -107,8 +107,8 @@
   color: var(--dark);
   background-color: var(--turquoise);
   border-color: transparent;
-  pointer-events: none;
-  
+  // pointer-events: none;
+
 }
 
 .catalog-content {
