Исправил недочеты с селектом, кнопкой Вверх, добавил модальное окно Звонка

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,4 +38,5 @@
 @import "./components/corporate";
 @import "./components/card";
 @import "./components/card-bag";
+@import "./components/modal";
 @import "media";
