--- a/src/scss/components/_card-bag.scss
+++ b/src/scss/components/_card-bag.scss
@@ -36,14 +36,16 @@
 
 .card-bag {
   // position: fixed;
+  display: flex;
+  flex-direction: column;
   top: 0;
   right: 0;
   width: 420px;
   height: 100%;
   padding: 20px 30px;
   background-color: #000;
-  // transform: translateX(100%);
   transition: transform .3s ease-in-out;
+  overflow: auto;
   z-index: 3;
 
   &--active {
@@ -80,6 +82,37 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
   }
+  &__bottom {
+    padding-top: 10px;
+    margin-top: auto;
+    border-top: 1px solid #555;
+  }
+  &__descr {
+    @extend %oswald-700;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+    color: var(--turquoise);
+  }
+  &__fullprice {
+    position: relative;
+    &::after {
+      content: '.000 ₽'
+    }
+  }
+  &__text {
+    @extend %oswald-400;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+  }
+  &__btn {
+    width: 100%;
+  }
 }
 
 
@@ -89,7 +122,8 @@
   border-bottom: 1px solid #555555;
 
   &__img {
-    width: 60px;
+    max-width: 60px;
+    width: 100%;
     height: 80px;
     margin-right: 20px;
   }
@@ -122,10 +156,15 @@
   }
 
   &__info-price {
+    position: relative;
     @extend %oswald-700;
     font-size: 18px;
     letter-spacing: 0.04em;
     color: var(--turquoise);
+
+    &::after {
+      content: '.000 ₽'
+    }
   }
 
   &__info-botton {
