--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -48,7 +48,7 @@
       opacity: 1;
       padding: 5px 15px 5px 5px;
       &:focus-visible {
-        display: none;
+        outline: none;
       }
       &::placeholder {
         @extend %oswald-300;
