--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,6 +1,6 @@
 .card-page {
   padding-top: 60px;
-  background-image: url('../../img/card-img.png');
+  background-image: url('.././img/card-img.png');
   background-repeat: no-repeat;
   background-position: 100% center;
   background-size: contain;
