--- a/src/scss/components/_contact-page.scss
+++ b/src/scss/components/_contact-page.scss
@@ -10,7 +10,7 @@
   &::before {
     top: -130px;
     right: 0;
-    background-image: url('../../img/contact-page-img-1.png');
+    background-image: url('.././img/contact-page-img-1.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 614px;
@@ -19,7 +19,7 @@
   &::after {
     top: 5%;
     left: 0;
-    background-image: url('../../img/contact-page-img-2.png');
+    background-image: url('.././img/contact-page-img-2.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 680px;
