--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -10,7 +10,7 @@
     left: 0;
     width: 691.88px;
     height: 1037.83px;
-    background-image: url('../../img/contact-img-back.png');
+    background-image: url('.././img/contact-img-back.png');
   }
   &__top {
     display: flex;
