--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -129,7 +129,7 @@
     align-items: center;
     position: relative;
     padding-left: 28px;
-    background-image: url('../../img/search.svg');
+    background-image: url('.././img/search.svg');
     background-position:left;
     background-repeat: no-repeat;
     background-size:18px;
