--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -4,7 +4,7 @@
   // height: 1245px;
   padding-top: 170px;
   padding-bottom: 607px;
-  background-image: url('../../img/hero-img.png');
+  background-image: url('.././img/hero-img.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -103,7 +103,7 @@
     border-radius: 10%;
     background: rgba(0, 0, 0, 0.20);
     backdrop-filter: blur(10px);
-    background-image: url('../../img/mobile.svg');
+    background-image: url('.././img/mobile.svg');
     background-repeat: no-repeat;
     background-position: 8%;
     background-size: 16px;
