--- a/src/scss/components/_payment-error.scss
+++ b/src/scss/components/_payment-error.scss
@@ -9,7 +9,7 @@
     bottom: 0;
   }
   &::before {
-    background-image: url('../../img/pay-error-img.png');
+    background-image: url('.././img/pay-error-img.png');
     background-repeat: no-repeat;
     background-size: auto;
     right: 0;
