--- a/src/scss/components/_populat-flow.scss
+++ b/src/scss/components/_populat-flow.scss
@@ -1,7 +1,7 @@
 .popular {
   position: relative;
   padding-bottom: 160px;
-  background-image: url('../../img/popular-img.png');
+  background-image: url('.././img/popular-img.png');
   background-repeat: no-repeat;
   background-position: right top;
 
