--- a/src/scss/components/_reason.scss
+++ b/src/scss/components/_reason.scss
@@ -97,7 +97,7 @@
     content: '';
     bottom: -55%;
     left: -30px;
-    background-image: url('../../img/circle-arrow.svg');
+    background-image: url('.././img/circle-arrow.svg');
     background-repeat: no-repeat;
     width: 20px;
     height: 80px;
