--- a/src/scss/components/_successfully.scss
+++ b/src/scss/components/_successfully.scss
@@ -11,7 +11,7 @@
       right: 0;
       width: 1060px;
       height: 1000px;
-      background-image: url('../../img/success-img.png');
+      background-image: url('.././img/success-img.png');
       background-repeat: no-repeat;
       background-position: 100% bottom;
       background-size: auto;
