--- a/src/scss/components/_corporate.scss
+++ b/src/scss/components/_corporate.scss
@@ -1,7 +1,7 @@
 .corporate {
   position: relative;
   padding: 45px 0 130px;
-  background-image: url('../../img/corp-img.png');
+  background-image: url('.././img/corp-img.png');
   background-repeat: no-repeat;
   background-size: auto;
   background-position: left center;
@@ -15,13 +15,13 @@
     z-index: -1;
   }
   &::before {
-    background-image: url('../../img/corp-img-right.png');
+    background-image: url('.././img/corp-img-right.png');
     width: 610px;
     height: 710px;
     right: 0;
   }
   &::after {
-    background-image: url('../../img/corp-img-left.png');
+    background-image: url('.././img/corp-img-left.png');
     left: 0;
     width: 410px;
     height: 500px;
