--- a/src/scss/components/_error-404.scss
+++ b/src/scss/components/_error-404.scss
@@ -13,7 +13,7 @@
       bottom: 0;
       width: 890px;
       height: 1090px;
-      background-image: url('../../img/error-404-img.png');
+      background-image: url('.././img/error-404-img.png');
       background-repeat: no-repeat;
       background-size: cover;
       z-index: -1;
@@ -25,7 +25,7 @@
       bottom: 0;
       width: 480px;
       height: 778px;
-      background-image: url('../../img/error-404-img-2.png');
+      background-image: url('.././img/error-404-img-2.png');
       background-repeat: no-repeat;
       background-size: cover;
       z-index: -1;
