--- a/src/scss/components/_product.scss
+++ b/src/scss/components/_product.scss
@@ -1,39 +1,44 @@
 .product {
   position: relative;
-  // width: 350px;
+
   &__position {
     position: absolute;
     top: -10px;
     right: -10px;
     z-index: 1;
   }
-  &__position-offers {
-    width: 60px;
-    height: 60px;
-    border-radius: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    @extend %oswald-400;
-    font-size: 20px;
-    line-height: 30px;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-    color:var(--dark);
 
-  }
-  &__position-offers--new {
-    background-color: var(--wild);
-  }
-  &__position-offers--sale {
-    background-color: #31985A;
-  }
+  // &__position-offers {
+  //   width: 60px;
+  //   height: 60px;
+  //   border-radius: 100%;
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  //   @extend %oswald-400;
+  //   font-size: 20px;
+  //   line-height: 30px;
+  //   letter-spacing: 0.02em;
+  //   text-transform: uppercase;
+  //   color: var(--dark);
+
+  // }
+
+  // &__position-offers--new {
+  //   background-color: var(--wild);
+  // }
+
+  // &__position-offers--sale {
+  //   background-color: #31985A;
+  // }
+
   &__link-img {
     display: block;
     width: 100%;
     height: 75%;
     margin-bottom: 10px;
   }
+
   &__img {
     width: 100%;
     height: 100%;
@@ -45,6 +50,7 @@
       filter: grayscale(0)
     }
   }
+
   &__title {
     @extend %oswald-400;
     color: var(--white);
@@ -54,11 +60,13 @@
     margin-bottom: 10px;
 
   }
+
   &__price {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
   }
+
   &__btn {
     &:disabled {
       pointer-events: none;
@@ -66,8 +74,40 @@
     }
   }
 }
+
+.product[data-info]::after {
+  content: attr(data-info);
+  display: block;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @extend %oswald-400;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  z-index: 1;
+  color: var(--dark);
+}
+
+.product[data-info="new"]::after {
+  background-color: #D978AC;
+}
+
+.product[data-info="sale"]::after {
+  background-color: #31985A;
+}
+
 .product-price {
   color: var(--white);
+
   &__current {
     position: relative;
     margin-right: 10px;
@@ -78,6 +118,7 @@
 
 
   }
+
   &__old {
     position: relative;
     @extend %oswald-400;
@@ -86,6 +127,7 @@
     letter-spacing: 0.04em;
     color: #939393;
     text-decoration: line-through;
+
     &::after {
       // position: absolute;
       content: '.00 ₽'
@@ -96,6 +138,7 @@
 
 .price-current {
   position: relative;
+
   &::after {
     // position: absolute;
     content: '.00 ₽'
@@ -104,6 +147,7 @@
 
 .price-old {
   position: relative;
+
   &::after {
     // position: absolute;
     content: '.00 ₽'
